trunk/Archive/a0b7e680979d7c48e0be128b7b646f17-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:121:23: warning: missing terminating " character [enabled by default]
     std::string str = "employee{ 21, \"surname1\", \"forename1\", 2.50 };
                       ^
main.cpp:121:5: error: missing terminating " character
     std::string str = "employee{ 21, \"surname1\", \"forename1\", 2.50 };
     ^
main.cpp:122:5: error: stray '\' in program
     employee{ 22, \"surname2\", \"forename2\", 2.51 };
     ^
main.cpp:122:20: warning: missing terminating " character [enabled by default]
     employee{ 22, \"surname2\", \"forename2\", 2.51 };
                    ^
main.cpp:122:5: error: missing terminating " character
     employee{ 22, \"surname2\", \"forename2\", 2.51 };
     ^
main.cpp:123:5: error: stray '\' in program
     employee{ 23, \"surname3\", \"forename3\", 2.52 };
     ^
main.cpp:123:20: warning: missing terminating " character [enabled by default]
     employee{ 23, \"surname3\", \"forename3\", 2.52 };
                    ^
main.cpp:123:5: error: missing terminating " character
     employee{ 23, \"surname3\", \"forename3\", 2.52 };
     ^
main.cpp:124:5: error: stray '\' in program
     employee{ 24, \"surname4\", \"forename4\", 2.53 };"
     ^
main.cpp: In function 'int main()':
main.cpp:122:5: error: 'employee' was not declared in this scope
     employee{ 22, \"surname2\", \"forename2\", 2.51 };
     ^
main.cpp:122:5: note: suggested alternative:
main.cpp:38:12: note:   'client::employee'
     struct employee
            ^
main.cpp:157:1: error: expected ',' or ';' at end of input
 }
 ^
main.cpp:157:1: error: expected '}' at end of input
